[package]
name = "blockchain"
version = "0.9.1"
authors = ["Wei Tang <hi@that.world>"]
description = "Unopinioned blockchain framework"
license = "GPL-3.0"
edition = "2018"

[dependencies]
blockchain-core = { version = "0.1", path = "core" }

[workspace]
members = [
	"network/simple",
	"examples/counter",
]
