[package]
name = "counter"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
primitive-types = { version = "0.2", features = ["codec"] }
parity-codec = "3.0"
parity-codec-derive = "3.0"
blockchain = { version = "0.7", path = "../.." }
blockchain-network-simple = { version = "0.3", path = "../../network/simple" }
sha3 = "0.8"
clap = "2.33"
