[package]
name = "counter"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
primitive-types = { version = "0.4", features = ["codec"] }
parity-codec = { version = "4.0", features = ["derive"] }
blockchain = { version = "0.9", path = "../.." }
blockchain-network-simple = { version = "0.5", path = "../../network/simple" }
sha3 = "0.8"
clap = "2.33"
