[package]
name = "blockchain-network-simple"
version = "0.1.2"
authors = ["Wei Tang <hi@that.world>"]
description = "Simple network interface for blockchain"
license = "GPL-3.0"
edition = "2018"

[dependencies]
blockchain = { version = "0.5", path = "../.." }
libp2p = "0.7"
parity-codec = { version = "3.0", features = ["derive"] }
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
